# HopCoder

./: .gitignore  BUILD_INSTRUCTIONS.md  README.md  package-lock.json  setup_env.ps1
apps/hopcoder/: README.md  package.json  product.json
apps/hopcoder-shell/: .env  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/hopcoder-shell/src/: App.tsx  index.css  vite-env.d.ts
apps/hopcoder-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/hopcoder-shell/src-tauri/src/: fs_handlers.rs  ipc.rs  lsp.rs  main.rs  memory_store.rs  terminal.rs  workspace.rs
apps/hopcoder-shell/src/ai/: Orchestrator.ts  ToolRegistry.ts  registerFsTools.ts  types.ts
apps/hopcoder-shell/src/ai/providers/: AzureAgentProvider.ts  GeminiProvider.ts  MockProvider.ts  OpenAIProvider.ts
apps/hopcoder-shell/src/components/: ChatPanel.tsx  CommandPalette.tsx  Editor.tsx  FileSearch.tsx  Layout.tsx  MenuBar.tsx  ShortcutsHelp.tsx  Sidebar.tsx  TerminalPanel.tsx
apps/hopcoder-shell/src/hooks/: useEditor.ts  useHopWorkspace.ts  useTerminal.ts
apps/hopcoder-shell/src/lib/: hopMemory.ts  ipc.ts
apps/hopcoder-shell/src/lsp/: LspClient.ts  LspService.ts
apps/hopcoder/scripts/appimage/: hopcoder-url-handler.desktop  hopcoder.desktop
apps/hopcoder/src/vs/base/common/: product.ts
apps/hopcoder/src/vs/workbench/contrib/hopcoder/browser/: autocompleteService.ts  chatThreadService.ts  convertToLLMMessageService.ts  convertToLLMMessageWorkbenchContrib.ts  editCodeService.ts  fileService.ts  hopcoder.contribution.ts  hopcoderCommandBarService.ts  (+9 more)
(+38 files in other folders)
