[package]
name = "hopcoder-shell"
version = "0.1.0"
description = "HopCoder Tauri shell"
authors = ["HopTrendy"]
license = "MIT"
edition = "2021"
rust-version = "1.70"
build = "build.rs"

[dependencies]
anyhow = "1"
dashmap = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = ["api-all"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }

[build-dependencies]
tauri-build = { version = "1", features = [] }
